# rendezvous-coach

./: Cargo.toml  README.md  install.sh
.cargo/: config.toml
src/: feature.rs  lib.rs  plan.rs  time.rs
src/feature/coach/: lexicon.rs  mod.rs
src/feature/tts/: mod.rs
