[package]
name = "rendezvous-coach"
version = "0.4.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
error-stack = "0.6.0"
owo-colors = "4.2.3"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
sherpa-rs = { version = "0.6.8", features = ["tts"] }
rodio = "0.22"
ureq = "2"
bzip2 = { version = "0.4", features = ["static"] }
tar = "0.4"
indicatif = "0.17"
dirs = "5"
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
